Fixed the .portfolio__project width overflow for small a mobile view width (about 410px or lower)

--- a/styles/style.css
+++ b/styles/style.css
@@ -433,6 +433,7 @@ body {
   }
 
   .portfolio__project {
+    display: block;
     width: 95%;
   }
 
